# xmonad_config

./: .gitignore  .gitmodules  README.md  cabal.project  my-xmonad.cabal  rebuild.sh  xmonad.hs
