Name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-x86_64-linux
  main-is:             xmonad.hs
  other-modules:
  build-depends:       base
                     , containers
                     , xmonad
                     , xmonad-contrib
  hs-source-dirs:    .
  default-language:  Haskell2010
  ghc-options:        -Wall -Werror -fno-warn-missing-signatures -threaded
